# Niti-eal-template

./: Cargo.toml  README-template.md  README.md  cargo-generate.toml  rename-readme.delta
.cargo/: config.toml
avr-specs/: avr-atmega1280.json  avr-atmega164pa.json  avr-atmega168.json  avr-atmega2560.json  avr-atmega328.json  niti-v1.json
src/: main.rs
